[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eyre = "*"
itertools = "*"
indoc = { version = "2.0.4", features = [] }
num = { version = "0.4.1", features = [] }
rayon = "1.8.0"
plotters = "0.3.5"
ahash = "0.8.7"

[profile.toto]
inherits = "release"
